Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27963

Windows: Main Examples from QtMultimedia don't work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.0.0 RC 1
    • 5.0.0 Beta 2
    • None
    • Windows 7 64 bit, 335 Installers
      Windows XP 32 bit, 334 installer
    • I69a966b8

      Could not run the main examples of QtMultimedia, since they don't open any videos.

      This is valid for:
      customvideoitem
      customvideowidget
      player
      videographicsitem
      videowidget

      This is most likely a result of the angle library integration that happened on the weekend.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mkalinow Maurice Kalinowski
            hihrig Holger Ihrig (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes