simplified example

- do not use any opengl additions inside this simple example
- also fixes problems in relation to mixing angle with GLWidgets

Task-number: QTBUG-27963
Change-Id: I69a966b886cd8b3e88d6f3be48463eee59baa58a
Reviewed-by: hjk <qthjk@ovi.com>